--- a/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
@@ -21,6 +21,16 @@
             </div>
 
             <div class="col-lg-3 col-md-4 col-sm-6">
+                
+                <app-input-select class="mb-2"
+                [headerText]="'DNI'"
+                [control]="changeAdminForm.get('dni_type')"
+                [options]="dniOptions"></app-input-select>
+
+                <app-input-text class="mb-2"
+                [headerText]="'Numero'" 
+                [inputType]="'number'" 
+                [control]="changeAdminForm.get('dni')"></app-input-text>
 
                 <app-input-select class="mb-2"
                 [headerText]="'Género'"
