--- a/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
+++ b/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
@@ -1,13 +1,33 @@
 <div class="container-fluid bg-color">
     <app-header></app-header>
     <div class="d-flex flex-column align-items-center">
-        <div class="form-group-2 d-flex justify-content-center mt-5">
-            <mat-icon class="position" [inline]=true>search</mat-icon>
-            <input class="form-control-2" type="text" name = "search" (keyup)="search($event)" placeholder="Titulo, autor, editorial..." [(ngModel)] = "parameter">
-        </div>
         <div class="d-flex flex-md-row justify-content-center col-lg-12 col-md-12 col-sm-12 m-0 disposition0">
             <button class="custom-large-btn mr-sm-4" type="button" (click)="goTo('login')">Iniciar sesion</button>
             <button class="custom-large-btn" type="button" (click)="goTo('signup')">Crear cuenta</button>
+        </div>
+        <div class="form-group-2 d-flex justify-content-center mt-5">
+            <mat-icon class="position" [inline]=true>search</mat-icon>
+            <input class="form-control-2" type="text" name="search" placeholder="Titulo, autor, editorial..." [(ngModel)] = "parameter">
+        </div>
+    </div>
+
+    <div class="row mt-4">
+
+        <div class="col-lg-2 col-md-3 col-sm-4 mb-3" *ngFor="let book of books | filterBy:parameter:['title','author','isbn','editorial','topic']">
+            <div class="card">
+                <img class="card-img-top" [src]="book.front_image" alt="">
+                <div class="card-body">
+                    <h4 class="card-title">
+                    {{book.title}}
+                    </h4>
+                    <p class="card-text">
+                        Autor: {{book.author}} <br> 
+                        Género: {{book.topic}} <br>
+                        Idioma: {{book.language}} <br>
+                        Editorial: {{book.editorial}}
+                    </p>
+                </div>
+            </div>
         </div>
         
     </div>
