--- a/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
@@ -14,7 +14,9 @@
                     Autor: {{book.author}} <br> 
                     Género: {{book.topic}} <br>
                     Idioma: {{book.language}} <br>
-                    Editorial: {{book.editorial}}
+                    Editorial: {{book.editorial}}<br>
+                    Precio: {{book.price}} <br>
+                    Disponibilidad: {{book.available_units}} 
                 </p>
             </div>
             <div class="footer d-flex  justify-content-around mb-3">
