--- a/cosmosLibrary/src/styles.scss
+++ b/cosmosLibrary/src/styles.scss
@@ -130,3 +130,40 @@ button:focus{
     width: 0;
     height: 0;
 }
+
+.mat-checkbox-inner-container{
+    position: inherit !important; 
+    width: 0px!important; 
+}
+
+.mat-checkbox .mat-checkbox-frame {
+    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    border:2px solid rgba($color:$gray-2, $alpha: 1);
+    background-color: transparent;
+}
+
+.mat-checkbox-indeterminate.mat-accent .mat-checkbox-background, .mat-checkbox-checked.mat-accent .mat-checkbox-background {
+    width: 20px;
+    height: 20px;
+    border-radius: 5px;
+    border:2px solid rgba($color:$gray-2, $alpha: 1);
+    background-color: transparent;
+}
+
+.mat-checkbox-checkmark-path{
+    stroke:$blue-2 !important;
+    stroke-width: 2;
+}
+
+.mat-radio-outer-circle {
+    border: 1px solid rgba($color:$gray-2, $alpha: 1); 
+    background-color: transparent;
+}
+
+
+.mat-radio-button.mat-accent .mat-radio-inner-circle{
+    background-color:$gray-2 !important;
+    border: 1px solid rgba($color:$gray-2, $alpha: 1)!important;
+}
