--- a/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
+++ b/cosmosLibrary/src/app/components/root/administrators/manage-admin/manage-admin.component.html
@@ -1,4 +1,9 @@
 <div class="container-fluid bg-color">
+    <div class="menu">
+        <div class="bg-icon1" (click)="logOut()">
+            <mat-icon [inline]=true>arrow_back</mat-icon>
+        </div>
+    </div>
     <app-header></app-header>
 
     <div class="row">
