--- a/cosmosLibrary/src/app/components/client/profile/profile.component.html
+++ b/cosmosLibrary/src/app/components/client/profile/profile.component.html
@@ -1,4 +1,26 @@
 <div class="container-fluid bg-color">
+    <div class="menu">
+        <div class="bg-icon1" [matMenuTriggerFor]="menu"><mat-icon [inline]=true>menu</mat-icon></div>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item (click)="goTo('home')">
+                <mat-icon>home</mat-icon>
+                <span>Inicio</span>
+            </button>
+            <button mat-menu-item (click)="goTo('shopping-cart')">
+                <mat-icon>shopping_cart</mat-icon>
+                <span>Carrito</span>
+            </button>
+            <button mat-menu-item (click)="goTo('history-cient')">
+                <mat-icon>playlist_add_check</mat-icon>
+                <span>Historial</span>
+            </button>
+            <button mat-menu-item (click)="logOut()">
+                <mat-icon>arrow_back_ios</mat-icon>
+                <span>Salir</span>
+            </button>
+        </mat-menu>
+    </div>
+
     <app-header></app-header>
 
     <div class="container py-5">
