--- a/cosmosLibrary/src/app/components/main/home/home.component.scss
+++ b/cosmosLibrary/src/app/components/main/home/home.component.scss
@@ -23,6 +23,24 @@ $gray-3:#363636;
 
 
 
+.bg-icon{
+    border-radius: 50%;
+    z-index: 100;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
+    background-color:rgb(150, 150, 255);
+}
+
+.bg-icon > .mat-icon.mat-icon-inline{
+    font-size: 23px;
+    text-align: center;
+    line-height: 2rem;
+    color: black;
+}
+
+
+
 @include media-breakpoint-between(xs, sm) {
 
 
@@ -62,6 +80,19 @@ $gray-3:#363636;
         line-height: 3rem;
     }
     
+    .bg-icon > .mat-icon.mat-icon-inline{
+        font-size: 23px;
+        text-align: center;
+        line-height: 2rem;
+        color: black;
+    }
+
+    .bg-icon1 > .mat-icon.mat-icon-inline{
+        font-size: 23px;
+        text-align: center;
+        line-height: 2rem;
+        color: black;
+    }
     
 }
 
@@ -99,6 +130,20 @@ $gray-3:#363636;
         font-size: 23px;
         color: rgba($color: $gray-2, $alpha: 1);
         line-height: 3rem;
+    }
+
+    .bg-icon > .mat-icon.mat-icon-inline{
+        font-size: 23px;
+        text-align: center;
+        line-height: 2rem;
+        color: black;
+    }
+
+    .bg-icon1 > .mat-icon.mat-icon-inline{
+        font-size: 23px;
+        text-align: center;
+        line-height: 2rem;
+        color: black;
     }
     
 }
