--- a/cosmosLibrary/src/app/components/system/header/header.component.html
+++ b/cosmosLibrary/src/app/components/system/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="row bg-image">
     <div class="col-sm-12 col-md-7 col-lg-5 mx-auto">
         <div class="disposition2">
-            <img src="/assets/images/icon1.png" alt="" class="img-fluid size1"/>
+            <img src="/assets/images/icon1.png" matTooltip="Regresar al inicio" alt="" class="img-fluid size1" (click)="goTo('home')"/>
             <img src="/assets/images/logo1.png" alt="" class="img-fluid size2"/>
         </div>
     </div>
