--- a/cosmosLibrary/src/app/components/system/header/header.component.scss
+++ b/cosmosLibrary/src/app/components/system/header/header.component.scss
@@ -15,6 +15,7 @@
     .size1{
         max-width: 100px;
         max-height: 100px;
+        cursor: pointer;
     }
     
     .size2{
@@ -34,6 +35,7 @@
     .size1{
         max-width: 200px;
         max-height: 200px;
+        cursor: pointer;
     }
     
     .size2{
