--- a/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
@@ -10,6 +10,10 @@
                 <mat-icon>library_add</mat-icon>
                 <span>Agregar</span>
             </button>
+            <button mat-menu-item (click)="goTo('refound-request')">
+                <mat-icon>compare_arrows</mat-icon>
+                <span>Devoluciones</span>
+            </button>
             <button mat-menu-item (click)="goTo('sold-out')">
                 <mat-icon>remove_shopping_cart</mat-icon>
                 <span>Agotados</span>
