--- a/cosmosLibrary/src/app/components/session/signup/signup.component.html
+++ b/cosmosLibrary/src/app/components/session/signup/signup.component.html
@@ -31,12 +31,12 @@
                 [options]="dniOptions"></app-input-select>
 
                 <app-input-text class="mb-2"
-                [headerText]="'Numero'" 
+                [headerText]="'Número'" 
                 [inputType]="'number'" 
                 [control]="signupForm.get('dni')"></app-input-text>
 
                 <app-input-text class="mb-2"
-                [headerText]="'e-mail'" 
+                [headerText]="'E-mail'" 
                 [inputType]="'email'" 
                 [control]="signupForm.get('email')"></app-input-text>
 
@@ -49,7 +49,7 @@
 
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <app-input-select class="mb-2"
-                [headerText]="'país'"
+                [headerText]="'País'"
                 [control]="signupForm.get('country')"
                 [options]="countryOptions"></app-input-select>
 
@@ -59,7 +59,7 @@
                 [options]="stateOptions"></app-input-select>
 
                 <app-input-select class="mb-2"
-                [headerText]="'ciudad'"
+                [headerText]="'Ciudad'"
                 [control]="signupForm.get('city')"
                 [options]="cityOptions"></app-input-select>
                 
