--- a/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/add-book/add-book.component.html
@@ -11,6 +11,10 @@
                 <mat-icon>remove_shopping_cart</mat-icon>
                 <span>Agotados</span>
             </button>
+            <button mat-menu-item (click)="goTo('refound-request')">
+                <mat-icon>compare_arrows</mat-icon>
+                <span>Devoluciones</span>
+            </button>
             <button mat-menu-item (click)="goTo('update-admin')">
                 <mat-icon>account_circle</mat-icon>
                 <span>Perfil</span>
@@ -56,6 +60,11 @@
             [control]="createForm.get('pages_number')"
             ></app-input-text>
 
+            <app-input-radio class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
+            [headerText]="'Estado'"
+            [control]="createForm.get('status')" 
+            [options]="optionsStatus" 
+            ></app-input-radio>
 
             <app-input-text class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
             [headerText]="'Editorial'" 
@@ -87,14 +96,9 @@
             [control]="createForm.get('available_units')"
             ></app-input-text>
 
-            <mat-checkbox class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto" [formControl]="createForm.get('on_news')">Publicar en noticias</mat-checkbox>
-
-            <app-input-radio class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
-            [headerText]="'Estado'"
-            [control]="createForm.get('status')" 
-            [options]="optionsStatus" 
-            ></app-input-radio>
-
+            <div class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto pt-3">
+                <mat-checkbox  [formControl]="createForm.get('on_news')">Publicar en noticias</mat-checkbox>
+            </div>
 
             <app-input-image class="col-lg-4 col-md-4 col-sm-6 mb-2 mx-lg-auto"
             [headerText]="'Portada'"
