--- a/cosmosLibrary/src/app/components/admin/books/edit-book/edit-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/edit-book/edit-book.component.html
@@ -15,6 +15,10 @@
                 <mat-icon>remove_shopping_cart</mat-icon>
                 <span>Agotados</span>
             </button>
+            <button mat-menu-item (click)="goTo('refound-request')">
+                <mat-icon>compare_arrows</mat-icon>
+                <span>Devoluciones</span>
+            </button>
             <button mat-menu-item (click)="goTo('update-admin')">
                 <mat-icon>account_circle</mat-icon>
                 <span>Perfil</span>
