--- a/cosmosLibrary/src/app/components/admin/misc/historical-sold-out/historical-sold-out.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/historical-sold-out/historical-sold-out.component.html
@@ -10,6 +10,14 @@
                 <mat-icon>library_add</mat-icon>
                 <span>Agregar</span>
             </button>
+            <button mat-menu-item (click)="goTo('refound-request')">
+                <mat-icon>compare_arrows</mat-icon>
+                <span>Devoluciones</span>
+            </button>
+            <button mat-menu-item (click)="goTo('sold-out')">
+                <mat-icon>remove_shopping_cart</mat-icon>
+                <span>Agotados</span>
+            </button>
             <button mat-menu-item (click)="goTo('update-admin')">
                 <mat-icon>account_circle</mat-icon>
                 <span>Perfil</span>
