--- a/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
@@ -6,15 +6,15 @@
                 <mat-icon>home</mat-icon>
                 <span>Inicio</span>
             </button>
-            <button mat-menu-item (click)="goTo('history-client')">
-                <mat-icon>playlist_add_check</mat-icon>
-                <span>Historial</span>
+            <button mat-menu-item (click)="goTo('add-book')">
+                <mat-icon>library_add</mat-icon>
+                <span>Agregar</span>
             </button>
-            <button mat-menu-item (click)="goTo('pocket-client')">
-                <mat-icon>account_balance_wallet</mat-icon>
-                <span>Monedero</span>
+            <button mat-menu-item (click)="goTo('sold-out')">
+                <mat-icon>remove_shopping_cart</mat-icon>
+                <span>Agotados</span>
             </button>
-            <button mat-menu-item (click)="goTo('profile-client')">
+            <button mat-menu-item (click)="goTo('update-admin')">
                 <mat-icon>account_circle</mat-icon>
                 <span>Perfil</span>
             </button>
@@ -24,9 +24,11 @@
             </button>
         </mat-menu>
     </div>
-    
+
     <app-header></app-header>
-    <div class="container py-5">
+
+    <div class="row mt-4">
+
         
-    </div>
-</div>
+    </div> 
+</div> 
