--- a/cosmosLibrary/src/app/components/client/pocket/pocket.component.html
+++ b/cosmosLibrary/src/app/components/client/pocket/pocket.component.html
@@ -10,9 +10,9 @@
                 <mat-icon>shopping_cart</mat-icon>
                 <span>Carrito</span>
             </button>
-            <button mat-menu-item (click)="goTo('pocket-client')">
-                <mat-icon>account_balance_wallet</mat-icon>
-                <span>Monedero</span>
+            <button mat-menu-item (click)="goTo('history-client')">
+                <mat-icon>playlist_add_check</mat-icon>
+                <span>Historial</span>
             </button>
             <button mat-menu-item (click)="goTo('profile-client')">
                 <mat-icon>account_circle</mat-icon>
@@ -27,17 +27,6 @@
 
     <app-header></app-header>
     <div class="container py-5">
-        <mat-tab-group mat-align-tabs="center">
-            <mat-tab>
-                <ng-template mat-tab-label><mat-icon class="mr-2">shopping_basket</mat-icon>Compras</ng-template>
-                Content 1
-            </mat-tab>
-            
-            <mat-tab>
-                <ng-template mat-tab-label><mat-icon class="mr-2">playlist_add_check</mat-icon>Reservas</ng-template>
-                Content 2
-            </mat-tab>
-            
-        </mat-tab-group>
+        
     </div>
 </div>
