--- a/cosmosLibrary/src/app/components/client/profile/profile.component.html
+++ b/cosmosLibrary/src/app/components/client/profile/profile.component.html
@@ -10,9 +10,13 @@
                 <mat-icon>shopping_cart</mat-icon>
                 <span>Carrito</span>
             </button>
-            <button mat-menu-item (click)="goTo('history-cient')">
+            <button mat-menu-item (click)="goTo('history-client')">
                 <mat-icon>playlist_add_check</mat-icon>
                 <span>Historial</span>
+            </button>
+            <button mat-menu-item (click)="goTo('pocket-client')">
+                <mat-icon>account_balance_wallet</mat-icon>
+                <span>Monedero</span>
             </button>
             <button mat-menu-item (click)="logOut()">
                 <mat-icon>arrow_back_ios</mat-icon>
