--- a/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
+++ b/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
@@ -38,7 +38,7 @@
                         Autor: {{book.author}} <br> 
                         Género: {{book.topic}} <br>
                         Idioma: {{book.language}} <br>
-                        Editorial: {{book.editorial}}
+                        Editorial: {{book.editorial}} <br>
                         Precio: {{book.price}} <br>
                         Unidades disponibles: {{book.available_units}} 
                     </p>
