--- a/cosmosLibrary/src/app/components/main/home/home.component.html
+++ b/cosmosLibrary/src/app/components/main/home/home.component.html
@@ -6,9 +6,13 @@
                 <mat-icon>shopping_cart</mat-icon>
                 <span>Carrito</span>
             </button>
-            <button mat-menu-item (click)="goTo('history-cient')">
+            <button mat-menu-item (click)="goTo('history-client')">
                 <mat-icon>playlist_add_check</mat-icon>
                 <span>Historial</span>
+            </button>
+            <button mat-menu-item (click)="goTo('pocket-client')">
+                <mat-icon>account_balance_wallet</mat-icon>
+                <span>Monedero</span>
             </button>
             <button mat-menu-item (click)="goTo('profile-client')">
                 <mat-icon>account_circle</mat-icon>
@@ -44,7 +48,7 @@
                         Autor: {{book.author}} <br> 
                         Género: {{book.topic}} <br>
                         Idioma: {{book.language}} <br>
-                        Editorial: {{book.editorial}}<br>
+                        Editorial: {{book.editorial}} <br>
                         Precio: {{book.price}} <br>
                         Unidades disponibles: {{book.available_units}} 
                     </p>
