--- a/cosmosLibrary/src/app/components/system/input-radio/input-radio.component.html
+++ b/cosmosLibrary/src/app/components/system/input-radio/input-radio.component.html
@@ -1,9 +1,6 @@
 <label id="example-radio-group-label">{{headerText}}</label>
-<mat-radio-group
-  aria-labelledby="example-radio-group-label"
-  class="example-radio-group"
-  [formControl]="control">
-  <mat-radio-button class="example-radio-button" *ngFor="let option of options" [value]="option">
+<mat-radio-group class="d-flex justify-content-start" [formControl]="control">
+  <mat-radio-button class="mr-4" *ngFor="let option of options" [value]="option">
     {{option}}
   </mat-radio-button>
 </mat-radio-group>
