--- a/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
+++ b/cosmosLibrary/src/app/components/admin/books/manage-book/manage-book.component.html
@@ -26,31 +26,33 @@
     </div>
 
     <app-header></app-header>
+    <div class="container">
+        <div class="row mt-4">
 
-    <div class="row mt-4">
-
-        <div class="col-lg-3 col-md-3 col-sm-4 mb-3" *ngFor='let book of books'>
-            <div class="card">
-                <img class="card-img-top" [src]="book.front_image" alt="">
-                <div class="card-body">
-                    <h4 class="card-title">
-                    {{book.title}}
-                    </h4>
-                    <p class="card-text">
-                        Autor: {{book.author}} <br> 
-                        Género: {{book.topic}} <br>
-                        Idioma: {{book.language}} <br>
-                        Editorial: {{book.editorial}}<br>
-                        Precio: {{book.price}} <br>
-                        Disponibilidad: {{book.available_units}} 
-                    </p>
+            <div class="col-lg-3 col-md-3 col-sm-4 mb-3" *ngFor='let book of books'>
+                <div class="card">
+                    <img class="card-img-top" [src]="book.front_image" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">
+                        {{book.title}}
+                        </h4>
+                        <p class="card-text">
+                            Autor: {{book.author}} <br> 
+                            Género: {{book.topic}} <br>
+                            Idioma: {{book.language}} <br>
+                            Editorial: {{book.editorial}}<br>
+                            Precio: {{book.price}} <br>
+                            Disponibilidad: {{book.available_units}} 
+                        </p>
+                    </div>
+                    <div class="footer d-flex  justify-content-around mb-3">
+                        <div class="bg-icon" (click)="deleteBook(book)"><mat-icon [inline]=true>delete</mat-icon></div>
+                        <div class="bg-icon" (click)="editBook(book)"><mat-icon [inline]=true>edit</mat-icon></div>
+                    </div>
+                    
                 </div>
-                <div class="footer d-flex  justify-content-around mb-3">
-                    <div class="bg-icon" (click)="deleteBook(book)"><mat-icon [inline]=true>delete</mat-icon></div>
-                    <div class="bg-icon" (click)="editBook(book)"><mat-icon [inline]=true>edit</mat-icon></div>
-                </div>
-                
             </div>
-        </div>
-    </div> 
+        </div> 
+    </div>
+    
 </div> 
