--- a/cosmosLibrary/src/app/components/admin/misc/historical-sold-out/historical-sold-out.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/historical-sold-out/historical-sold-out.component.html
@@ -30,5 +30,22 @@
     </div>
 
     <app-header></app-header>
+
+    <div class="container">
+        <div class="row mt-4">
+
+            <div class="col-lg-2 col-md-3 col-sm-4 col-xs-3 mb-3" *ngFor='let book of soldouts'>
+                <div class="card">
+                    <img class="card-img-top" [src]="book.front_image" alt="">
+                    <div class="card-body">
+                        <h4 class="card-title">{{book.title}}</h4>
+                    </div>
+                    <div class="footer d-flex  justify-content-around mb-3">
+                        <div class="bg-icon" (click)="editBook(book)"><mat-icon [inline]=true>edit</mat-icon></div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </div>
 </div>
 
