--- a/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
+++ b/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
@@ -3,7 +3,7 @@
         <div class="bg-icon1" [matMenuTriggerFor]="menu"><mat-icon [inline]=true>menu</mat-icon></div>
         <mat-menu #menu="matMenu">
             <button mat-menu-item (click)="openshoppingcart()">
-                <mat-icon matBadge="15" matBadgeColor="warn" matBadgeHidden="false">shopping_cart</mat-icon>
+                <mat-icon [matBadge]="amount" matBadgeSize="small" matBadgeColor="warn" [matBadgeHidden]="!amount" matBadgePosition="after">shopping_cart</mat-icon>
                 <span>Carrito</span>
             </button>
             <button mat-menu-item (click)="goTo('login')">
