--- a/cosmosLibrary/src/app/components/client/history/history.component.html
+++ b/cosmosLibrary/src/app/components/client/history/history.component.html
@@ -6,10 +6,7 @@
                 <mat-icon>home</mat-icon>
                 <span>Inicio</span>
             </button>
-            <button mat-menu-item (click)="goTo('shopping-cart')">
-                <mat-icon>shopping_cart</mat-icon>
-                <span>Carrito</span>
-            </button>
+            <app-cart (click)="goTo('shopping-cart')"></app-cart>
             <button mat-menu-item (click)="goTo('pocket-client')">
                 <mat-icon>account_balance_wallet</mat-icon>
                 <span>Monedero</span>
