--- a/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
+++ b/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
@@ -2,10 +2,7 @@
     <div class="menu">
         <div class="bg-icon1" [matMenuTriggerFor]="menu"><mat-icon [inline]=true>menu</mat-icon></div>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="openshoppingcart()">
-                <mat-icon [matBadge]="amount" matBadgeSize="small" matBadgeColor="warn" [matBadgeHidden]="!amount" matBadgePosition="after">shopping_cart</mat-icon>
-                <span>Carrito</span>
-            </button>
+            <app-cart (click)="openshoppingcart()"></app-cart>
             <button mat-menu-item (click)="goTo('login')">
                 <mat-icon>login</mat-icon>
                 <span>Ingresar</span>
