--- a/cosmosLibrary/src/app/components/main/home/home.component.html
+++ b/cosmosLibrary/src/app/components/main/home/home.component.html
@@ -2,10 +2,7 @@
     <div class="menu">
         <div class="bg-icon1" [matMenuTriggerFor]="menu"><mat-icon [inline]=true>menu</mat-icon></div>
         <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="goTo('shopping-cart')">
-                <mat-icon>shopping_cart</mat-icon>
-                <span>Carrito</span>
-            </button>
+            <app-cart (click)="goTo('shopping-cart')"></app-cart>
             <button mat-menu-item (click)="goTo('history-client')">
                 <mat-icon>playlist_add_check</mat-icon>
                 <span>Historial</span>
