--- a/cosmosLibrary/src/app/components/client/shopping-cart/shopping-cart.component.html
+++ b/cosmosLibrary/src/app/components/client/shopping-cart/shopping-cart.component.html
@@ -30,13 +30,13 @@
     <div class="container py-5">
         <div class="row">
 
-            <div *ngFor="let item of items; index as j">
-                <div [style.background-image] ="'url(\''+ item.front_image +'\')'"></div>
-                <div>
-                    <div>
+            <div *ngFor="let item of items; index as j" class="col-lg-6 col-md-10 col-sm-6 mb-3 mx-auto d-flex border border-secondary p-1">
+                <!-- <div [style.background-image] ="'url(https://thumbs.dreamstime.com/b/toon-pig-punk-13358888.jpg)'"></div> -->
+                <div class="d-flex flex-column p-0">
+                    <div class="d-flex justify-content-end">
                         <mat-icon [inline]=true (click)="deleteItem(item, j)">clear</mat-icon>
                     </div>
-                    <div>
+                    <div class="d-flex justify-content-between p-2">
                         <div>
                             <p>{{item.name}}</p>
                             <p>Valor por unidad: ${{item.price}}</p>
@@ -44,7 +44,7 @@
         
                         <div>
                             <h2>$ {{item.total}}</h2>
-                            <div>
+                            <div class="d-flex justify-content-around">
                                 <p>Cantidad: </p>
                                 <mat-icon [inline]=true (click)="updateAmount(-1, item)">remove</mat-icon>
                                 <div>{{item.amount || 0}}</div>
