--- a/cosmosLibrary/src/app/components/main/home/home.component.html
+++ b/cosmosLibrary/src/app/components/main/home/home.component.html
@@ -38,7 +38,7 @@
                 <p class="lead mb-0">Recomendados para ti</p>
                 <hr class="mt-2">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4 mb-3" *ngFor="let book of suggestedBooks">
+            <div class="col-lg-3 col-md-4 col-sm-4 mb-3" *ngFor="let book of suggestedBooks">
                 <div class="card">
                     <img class="card-img-top" [src]="book.front_image" alt="">
                     <div class="card-body">
@@ -68,7 +68,7 @@
                 <p class="lead mb-0">Todos</p>
                 <hr class="mt-2">
             </div>
-            <div class="col-lg-3 col-md-3 col-sm-4 mb-3" *ngFor="let book of books | filterBy:parameter:['title','author','isbn','editorial','topic']">
+            <div class="col-lg-3 col-md-4 col-sm-4 mb-3" *ngFor="let book of books | filterBy:parameter:['title','author','isbn','editorial','topic']">
                 <div class="card">
                     <img class="card-img-top" [src]="book.front_image" alt="">
                     <div class="card-body">
@@ -85,8 +85,8 @@
                         </p>
                     </div>
                     <div class="footer d-flex  justify-content-around mb-3">
-                        <div class="bg-icon" (click)="book(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
-                        <div class="bg-icon" (click)="addtoShoppingcart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="book(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="addtoShoppingcart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
                     </div>
                 </div>
             </div>
