--- a/cosmosLibrary/src/app/components/client/profile/profile.component.html
+++ b/cosmosLibrary/src/app/components/client/profile/profile.component.html
@@ -101,7 +101,13 @@
             </div>
             
             <div *ngIf="isFormError()" class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0 alert alert-danger" role="alert">
-                <p *ngIf="signupForm.errors.noMatchingPassword">Las contraseñas no coinciden.</p>
+                <p *ngIf="updateprofileForm.errors.noMatchingPassword">Las contraseñas no coinciden.</p>
+                <p *ngIf="updateprofileForm.errors.noSpecialNumberOrLetterCharacters">
+                    La contraseña debe contener por lo menos: <br>
+                    * Un caracter especial. <br>
+                    * Una letra. <br>
+                    * Un número. <br>
+                </p>
             </div>
             
             <div class="d-flex flex-md-row justify-content-around col-lg-12 col-md-12 col-sm-12 m-0 disposition0">
