--- a/cosmosLibrary/src/app/components/session/signup/signup.component.html
+++ b/cosmosLibrary/src/app/components/session/signup/signup.component.html
@@ -85,6 +85,12 @@
         
             <div *ngIf="isFormError()" class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0 alert alert-danger" role="alert">
                 <p *ngIf="signupForm.errors.noMatchingPassword">Las contraseñas no coinciden.</p>
+                <p *ngIf="signupForm.errors.noSpecialNumberOrLetterCharacters">
+                    La contraseña debe contener por lo menos: <br>
+                    * Un caracter especial. <br>
+                    * Una letra. <br>
+                    * Un número. <br>
+                </p>
             </div>
             
             <div class="d-flex justify-content-center col-lg-12 col-md-12 col-sm-12 m-0">
