validations and services

--- a/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/change-admin-password/change-admin-password.component.html
@@ -41,7 +41,9 @@
 
                 <app-input-date class="mb-2"
                 [headerText]="'Fecha de nacimiento'" 
-                [control]="changeAdminForm.get('birthdate')"></app-input-date>
+                [control]="changeAdminForm.get('birthdate')"
+                [years] = "18"
+                ></app-input-date>
 
             </div>
 
