--- a/cosmosLibrary/src/app/components/client/profile/profile.component.html
+++ b/cosmosLibrary/src/app/components/client/profile/profile.component.html
@@ -39,7 +39,9 @@
 
                 <app-input-date class="mb-2"
                 [headerText]="'Fecha de nacimiento'" 
-                [control]="updateprofileForm.get('birthdate')"></app-input-date>
+                [control]="updateprofileForm.get('birthdate')"
+                [years] = "18"
+                ></app-input-date>
 
                 <app-input-select class="mb-2"
                 [headerText]="'Género'"
