--- a/cosmosLibrary/src/app/components/main/home/home.component.html
+++ b/cosmosLibrary/src/app/components/main/home/home.component.html
@@ -55,7 +55,7 @@
                         </p>
                     </div>
                     <div class="footer d-flex  justify-content-around mb-3">
-                        <div class="bg-icon" (click)="book(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
+                        <div class="bg-icon" (click)="booking(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
                         <div class="bg-icon" (click)="addtoShoppingcart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         </p>
                     </div>
                     <div class="footer d-flex  justify-content-around mb-3">
-                        <div class="bg-icon zoom" (click)="book(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="booking(book)"><mat-icon [inline]=true>playlist_add</mat-icon></div>
                         <div class="bg-icon zoom" (click)="addtoShoppingcart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
                     </div>
                 </div>
