--- a/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
+++ b/cosmosLibrary/src/app/components/main/home-guest/home-guest.component.html
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                     <div class="footer d-flex  justify-content-around mb-3">
-                        <div class="bg-icon zoom" (click)="addtoShoppingcart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="addToCart(book)"><mat-icon [inline]=true>add_shopping_cart</mat-icon></div>
                     </div>
                 </div>
             </div>
