--- a/cosmosLibrary/src/app/components/client/pocket/pocket.component.html
+++ b/cosmosLibrary/src/app/components/client/pocket/pocket.component.html
@@ -25,13 +25,11 @@
     <app-header></app-header>
     <div class="container py-5">
         <div class="row">
-            <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 d-flex align-items-center justify-content-center mx-auto">
+
+            <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 mx-auto d-flex flex-column  align-items-center justify-content-center">
                 <div class="circle">
                     <p class="tokens">{{tokens}}</p>
                 </div>
-            </div>
-
-            <div class="col-xs-10 col-sm-6 col-md-6 col-lg-4 mx-auto">
                 <div class="card-body">
                     <form class="mt-2" #tokenForm= "ngForm" (ngSubmit)= "buyTokens()" [formGroup]="buyTokensForm">
     
