local storage updated

--- a/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
@@ -40,8 +40,8 @@
                         </p>
                     </div>
                     <div class="d-flex  justify-content-around">
-                        <div class="bg-icon zoom" (click)="resolveRefound(0)"><mat-icon [inline]=true>clear</mat-icon></div>
-                        <div class="bg-icon zoom" (click)="resolveRefound(1)"><mat-icon [inline]=true>done</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="resolveRefound(0, item)"><mat-icon [inline]=true>clear</mat-icon></div>
+                        <div class="bg-icon zoom" (click)="resolveRefound(1, item)"><mat-icon [inline]=true>done</mat-icon></div>
                     </div>
                 </div>
             </div>
