--- a/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
+++ b/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.html
@@ -28,9 +28,9 @@
     <app-header></app-header>
     <div class="container py-5">
         <div class="row mt-4">
-            <div *ngFor="let item of refounds; index as j" class="col-lg-3 col-md-4 col-sm-6 mb-3 mx-auto d-flex border border-secondary p-0">
+            <div *ngFor="let item of refounds; index as j" class="col-lg-4 col-md-6 col-sm-6 mb-3 my-2 mx-auto d-flex border border-secondary p-0">
                 <img class="img-fluid front-page" [src]="item.front_image" alt="">
-                <div class="d-flex flex-column  px-2 m-0">
+                <div class="disposition9  px-2 m-0">
                     <div class="d-flex flex-column align-items-start">
                         <p class="mb-0">
                             {{item.username}}<br>
@@ -39,7 +39,7 @@
                             Precio: ${{item.price}}<br>
                         </p>
                     </div>
-                    <div class="d-flex  justify-content-around">
+                    <div class="d-flex  justify-content-around mb-3">
                         <div class="bg-icon zoom" (click)="resolveRefound(0)"><mat-icon [inline]=true>clear</mat-icon></div>
                         <div class="bg-icon zoom" (click)="resolveRefound(1)"><mat-icon [inline]=true>done</mat-icon></div>
                     </div>
