--- a/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.scss
+++ b/cosmosLibrary/src/app/components/admin/misc/refounds/refounds.component.scss
@@ -31,3 +31,11 @@
     object-fit: cover;
     object-position: top;
 }
+
+.disposition9{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items:center;
+    flex-grow: 5;
+}
